fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -888,6 +888,13 @@ a {
 .project-languages, .project-additional-info1, .project-additional-info2, .project-github, .project-link {
 	margin: 0.2em;
 	text-align: center;
+}
+
+.project-languages, .project-additional-info1, .project-additional-info2 {
+	font-size: var(--fs-s);
+}
+
+.project-github, .project-link {
 	font-size: var(--fs-xs);
 }
 
@@ -914,7 +921,11 @@ a {
 		transform: scale(1.1);
 	}
 
-	.project-languages, .project-additional-info1, .project-additional-info2, .project-github, .project-link {
+	.project-languages, .project-additional-info1, .project-additional-info2 {
+		font-size: var(--fs-m);
+	}
+	
+	.project-github, .project-link {
 		font-size: var(--fs-s);
 	}
 }
